--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,4 +1,4 @@
-@import './pages/_reset.scss';
+@import './pages/reset.scss';
 @import '../bootstrap-5.1.3/dist/css/bootstrap.css';
 
 @import './utils/varialbe.scss';
@@ -8,3 +8,6 @@
 
 
 @import './pages/index.scss';
+@import './pages/about.scss';
+@import './pages/blog.scss';
+@import './pages/location.scss';
