--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,23 +1,23 @@
 <footer class="w-100">
     <div class="container-md">
         <nav class="row d-flex justify-content-between">
-            <div class="col">
+            <div class="col-3 col-md">
                 <a href="../pages/index.html">
                     <img src="../assets/images/shark-blakc-bg.png" alt="logo" class="footer-logo">
                 </a>
             </div>
-            <ul class="col-7 d-flex justify-content-between align-items-center mb-0">
+            <ul class="col col-md-7 d-flex justify-content-between align-items-center mb-0">
                 <a href="../pages/index.html" class="footer-item">
-                    <li class="fs-3 fw-bolder">課程專區</li>
+                    <li class="fs-6 fs-md-3 fw-bolder">課程專區</li>
                 </a>
                 <a href="../pages/location.html" class="footer-item">
-                    <li class="fs-3 fw-bolder">營業據點</li>
+                    <li class="fs-6 fs-md-3 fw-bolder">營業據點</li>
                 </a>
                 <a href="../pages/index.html" class="footer-item">
-                    <li class="fs-3 fw-bolder">會員中心</li>
+                    <li class="fs-6 fs-md-3 fw-bolder">會員中心</li>
                 </a>
                 <a href="../pages/index.html" class="footer-item">
-                    <li class="fs-3 fw-bolder">最新消息</li>
+                    <li class="fs-6 fs-md-3 fw-bolder">最新消息</li>
                 </a>
             </ul>
         </nav>
