--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -19,7 +19,6 @@ body {
 
 .about-shark-section {
   padding: 48px 96px 96px;
-  ;
 }
 
 .about-shark-info {
@@ -131,8 +130,8 @@ body {
     text-align: center;
 
     img {
-      max-width: 108px;
-      height: auto;
+      max-height: 108px;
+      width: auto;
     }
   }
 
@@ -201,5 +200,102 @@ body {
     opacity: 0;
     transform: scale(1.4);
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
+}
+
+
+@media (max-width: 767px) {
+  .about-shark-section {
+    padding: 48px 24px;
+  }
+
+  .about-shark-info {
+
+    h1 {
+      font-size: 48px;
+    }
+
+    .underLine {
+      width: 15%;
+      height: 8px;
+    }
+
+    .quote {
+      margin: 32px 0;
+
+      h3 {
+        font-size: 22px;
+        line-height: 44px;
+      }
+    }
+
+    .btn-reservation {
+      .btn {
+        padding: 24px 64px;
+      }
+    }
+
+  }
+
+  .title {
+    margin-top: 48px;
+    margin-bottom: 32px;
+  }
+
+  .lesson-section {
+    .lesson-item {
+      gap: 24px;
+
+      .lesson-info {
+        height: 100%;
+        gap: 12px;
+        padding: 0 24px;
+        text-align: center;
+
+        p {
+          line-height: 1.5rem;
+        }
+      }
+    }
+  }
+
+  .wahtWeDo-section {
+    padding-top: 24px;
+
+    .icon {
+      img {
+        max-height: 80px;
+        width: auto;
+      }
+    }
+
+    .card-group {
+      padding: 0px 48px;
+
+      margin-bottom: 48px;
+
+      .card {
+        padding: 12px 24px;
+        margin-bottom: 24px;
+
+        .card-body {
+          padding: 0px 48px;
+
+          .card-text {
+            color: $primary;
+            padding: 12px 0 24px;
+            line-height: 1.5rem;
+            font-size: 16px;
+          }
+        }
+      }
+
+
+    }
+
+  }
+
+  .swiper-slide img {
+    height: 500px;
   }
 }
