--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -2,19 +2,19 @@
     <nav class="row">
         <ul class="col col-md-8 d-none d-md-flex justify-content-between align-items-center w-100 navbar">
             <a href="../pages/index.html" class="nav-item" data-page="index">
-                <li class="fs-md-3 fw-bolder">首頁</li>
+                <li class="fs-3 fw-bolder">首頁</li>
             </a>
             <a href="../pages/about.html" class="nav-item" data-page="about">
-                <li class="fs-md-3 fw-bolder">關於我們</li>
+                <li class="fs-3 fw-bolder">關於我們</li>
             </a>
             <a href="../pages/index.html">
                 <li><img src="../assets/images/shark-logo.png" alt="logo" class="header-logo"></li>
             </a>
             <a href="../pages/blog.html" class="nav-item" data-page="blog">
-                <li class="fs-md-3 fw-bolder">部落格專欄</li>
+                <li class="fs-3 fw-bolder">部落格專欄</li>
             </a>
             <a href="../pages/location.html" class="nav-item" data-page="location">
-                <li class="fs-md-3 fw-bolder">最近的運動地點</li>
+                <li class="fs-3 fw-bolder">最近的運動地點</li>
             </a>
         </ul>
     </nav>
