--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -9,7 +9,6 @@
 
 .nav-item.active {
   color: #007bff;
-  /* Bootstrap 的主要藍色 */
   font-weight: bold;
 }
 
@@ -28,12 +27,12 @@
     justify-content: center;
     border-top: 1px solid $primary;
     position: fixed;
-    left: -50px;
-    width: 100%;
+    left: 0px;
+    width: 100vw;
     background-color: #fff;
     z-index: 999;
-    transition: left 0.3s ease;
-    display: none;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
 
     li {
       margin: 0 auto;
@@ -47,6 +46,7 @@
 
   .my-d-flex {
     display: flex;
+    opacity: 1;
   }
 
   .my-d-none {
