--- a/assets/scss/pages/_blog.scss
+++ b/assets/scss/pages/_blog.scss
@@ -51,6 +51,7 @@
 
             p {
                 font-size: 18px;
+                line-height: 1.5rem;
                 overflow: hidden;
                 text-overflow: ellipsis;
                 display: -webkit-box;
@@ -99,54 +100,26 @@
 
 @media (max-width: 767px) {
     .blog-section {
-        padding: 96px 0 120px;
+        padding: 60px 0 120px;
 
         .blog-group {
-            h2 {
-                font-size: 36px;
-                margin-bottom: 12px;
-            }
-
             h5 {
-                font-size: 24px;
-                font-weight: 400;
-                color: $gray;
-                margin-bottom: 48px;
+                margin-bottom: 28px;
             }
         }
 
         .blog-item {
             gap: 16px;
-            margin-bottom: 48px;
-            display: flex;
-
-            img {
-                width: 40%;
-                aspect-ratio: 4/3;
-                border-radius: 5px;
-                object-fit: cover;
-            }
+            margin-bottom: 24px;
 
             .date_tag_block {
-                gap: 12px;
-                margin-bottom: 12px;
-
-                .date {
-                    padding: 6px 6px 6px 0px;
-                }
-
-                .tag {
-                    color: $gray;
-                    background-color: rgb(224, 224, 224);
-                    padding: 6px 12px;
-                    border-radius: 25px;
-                }
+                gap: 8px;
+                margin-bottom: 8px;
             }
 
             .blog-content {
                 h4 {
-                    font-size: 24px;
-                    margin-bottom: 12px;
+                    margin-bottom: 8px;
                 }
 
                 p {
@@ -157,7 +130,7 @@
                     -webkit-line-clamp: 4;
                     line-clamp: 4;
                     -webkit-box-orient: vertical;
-                    margin-bottom: 12px;
+                    margin-bottom: 8px;
                 }
             }
 
@@ -173,9 +146,9 @@
         }
 
         .btn-more {
-            padding: 8px 48px;
+            padding: 8px 42px;
             background-color: rgb(188, 188, 188);
-            font-size: 28px;
+            font-size: 24px;
             position: absolute;
             left: 50%;
         }
