--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -108,7 +108,7 @@ body {
 
     .lesson-info {
       height: 100%;
-      gap: 12px;
+      gap: 24px;
 
       h3 {
         font-weight: 1000;
@@ -121,7 +121,7 @@ body {
 
       p {
         color: $gray;
-        line-height: 2rem;
+        line-height: 3rem;
       }
     }
   }
@@ -156,7 +156,8 @@ body {
       .card-text {
         color: $primary;
         padding: 12px 0 24px;
-        line-height: 1.5rem;
+        font-size: 24px;
+        line-height: 36px;
       }
     }
 
