--- a/assets/scss/pages/_blog.scss
+++ b/assets/scss/pages/_blog.scss
@@ -76,6 +76,7 @@
     .btn-more {
         padding: 8px 48px;
         background-color: rgb(188, 188, 188);
+        color: white;
         font-size: 28px;
         position: absolute;
         left: 50%;
