--- a/assets/scss/pages/_blog.scss
+++ b/assets/scss/pages/_blog.scss
@@ -149,15 +149,17 @@
         .btn-more {
             padding: 8px 42px;
             font-size: 24px;
+            left: 35%;
         }
 
         aside {
             .tag-all {
-                font-size: 24px;
+                font-size: 18px;
             }
 
             .btn-tag {
-                font-size: 24px;
+                font-size: 18px;
+                padding: 0;
             }
         }
     }
