--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -21,7 +21,7 @@
     <!-- hamberger -->
     <div class="hambuger">
         <div class="d-flex justify-content-between align-items-center">
-            <a href="../pages/index.html" class="d-block">
+            <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/index" class="d-block">
                 <div><img src="../assets/images/shark-logo.png" alt="logo" class="header-logo"></div>
             </a>
             <div class="menu">
@@ -36,17 +36,17 @@
 
 
         <ul class="hambuger-list">
-            <a href="../pages/index.html" class="nav-item" data-page="index">
+            <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/index" class="nav-item" data-page="index">
                 <li class="fs-5">首頁</li>
             </a>
-            <a href="../pages/about.html" class="nav-item" data-page="about">
+            <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/about" class="nav-item" data-page="about">
                 <li class="fs-5">關於我們</li>
             </a>
 
-            <a href="../pages/blog.html" class="nav-item" data-page="blog">
+            <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/blog" class="nav-item" data-page="blog">
                 <li class="fs-5">部落格專欄</li>
             </a>
-            <a href="../pages/location.html" class="nav-item" data-page="location">
+            <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/location" class="nav-item" data-page="location">
                 <li class="fs-5">最近的運動地點</li>
             </a>
         </ul>
