--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -17,22 +17,23 @@
   height: 142px;
 }
 
-.hambuger {
+.hamburger {
   display: none;
 
-  .hambuger-list {
+  .hamburger-list {
+    display: none;
     text-align: center;
     padding: 40px 0;
     flex-direction: column;
     gap: 32px;
     justify-content: center;
     border-top: 1px solid $primary;
-    position: fixed;
-    left: 0px;
+    position: relative;
+    top: 0px;
     width: 100vw;
     background-color: #fff;
-    z-index: 999;
     opacity: 0;
+    z-index: 999;
     transition: opacity 0.5s ease-in-out;
 
     li {
@@ -47,6 +48,9 @@
 
   .my-d-flex {
     display: flex;
+  }
+
+  .my-opacity {
     opacity: 1;
   }
 
@@ -65,7 +69,7 @@
       display: none;
     }
 
-    .hambuger {
+    .hamburger {
       display: block;
     }
 
