--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -97,6 +97,8 @@ body {
 }
 
 .lesson-section {
+  overflow: hidden;
+
   .lesson-item {
     background-color: $light-green;
     gap: 64px;
@@ -179,6 +181,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .swiper-slide img {
@@ -186,6 +189,7 @@ body {
   width: 100%;
   height: 600px;
   object-fit: cover;
+  animation: zoom-in 9s ease infinite;
 }
 
 @keyframes pulse {
@@ -205,6 +209,20 @@ body {
     opacity: 0;
     transform: scale(1.4);
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
+}
+
+@keyframes zoom-in {
+  0% {
+    transform: scale(1, 1);
+  }
+
+  50% {
+    transform: scale(1.2, 1.2);
+  }
+
+  100% {
+    transform: scale(1, 1);
   }
 }
 
