--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -19,7 +19,7 @@
         </ul>
     </nav>
     <!-- hamberger -->
-    <div class="hambuger">
+    <div class="hamburger">
         <div class="d-flex justify-content-between align-items-center">
             <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/index" class="d-block">
                 <div><img src="../assets/images/shark-logo.png" alt="logo" class="header-logo"></div>
@@ -35,7 +35,7 @@
         </div>
 
 
-        <ul class="hambuger-list">
+        <ul class="hamburger-list">
             <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/index" class="nav-item" data-page="index">
                 <li class="fs-5">首頁</li>
             </a>
